deployment/k8s/monitoring/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "*"
  gateways:
    - xyne/xyne-gateway
  http:
    - match:
        - uri:
            prefix: /grafana/
        - uri:
            exact: /grafana
      rewrite:
        uri: /
      route:
        - destination:
            host: kube-prometheus-stack-grafana
            port:
              number: 3000
      timeout: 300s
